--- a/index.html
+++ b/index.html
@@ -68,11 +68,11 @@
                         </div>
                         <div class="iconos_info">
                             <div class="ico_info2">
-                                <img class="iconos" src="/img/estrella.png" alt="" height="20px">
+                                <img class="iconos" src="./img/estrella.png" alt="" height="20px">
                                 <p>Selected Vaccines</p>
                             </div>
                             <div class="ico_info">
-                                <img class="iconos" src="/img/proteger.png" alt="" height="20px">
+                                <img class="iconos" src="./img/proteger.png" alt="" height="20px">
                                 <p>Best protection</p>
                             </div>
 
@@ -128,7 +128,7 @@
 
             </div>
             <div class="fondo">
-                <img class="img_enfermera" src="/img/wepik-2022214-12515.jpg" "  alt=" reloj">
+                <img class="img_enfermera" src="./img/wepik-2022214-12515.jpg" "  alt=" reloj">
             </div>
         </div>
 
@@ -136,19 +136,19 @@
     <main>
         <div class="logos">
             <div class="logo-far">
-                <img src="/img/astrazeneca-logo-0.png" width="220px" alt="">
+                <img src="./img/astrazeneca-logo-0.png" width="220px" alt="">
             </div>
 
             <div class="logo-far">
-                <img src="/img/Sinovac_logo.svg.png" width="220px" alt="">
+                <img src="./img/Sinovac_logo.svg.png" width="220px" alt="">
             </div>
 
             <div class="logo-far">
-                <img src="/img/Pfizer-Logo.png" width="220px" alt="">
+                <img src="./img/Pfizer-Logo.png" width="220px" alt="">
             </div>
             <div class="logo-far">
 
-                <img src="/img/Moderna_logo.svg.png" width="220px" alt="">
+                <img src="./img/Moderna_logo.svg.png" width="220px" alt="">
             </div>
 
 
@@ -221,7 +221,7 @@
 
 
     <div class="usa-cubrebocas">
-        <img src="/img/numero1.png" alt="">
+        <img src="./img/numero1.png" alt="">
         <div class="informacion-uno">
             <h2>
                 Preparations Before Vaccine
@@ -285,7 +285,7 @@
 
     </div>
     <div class="contacto-emergy">
-        <img src="/img/doctor foto.png" alt="">
+        <img src="./img/doctor foto.png" alt="">
         <div class="informacion-uno">
             <h2>
                 Emergency Contact
